--- a/package.json
+++ b/package.json
@@ -9,11 +9,21 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "axios": "^1.3.2",
+    "element-plus": "^2.2.29",
     "vue": "^3.2.45",
-    "vue-router": "^4.1.6"
+    "vue-router": "^4.1.6",
+    "vuex": "^4.0.2"
   },
   "devDependencies": {
+    "@types/node": "^18.11.18",
     "@vitejs/plugin-vue": "^4.0.0",
+    "@vitejs/plugin-vue-jsx": "^3.0.0",
+    "node-sass": "^8.0.0",
+    "sass": "^1.58.0",
+    "sass-loader": "^7.3.1",
+    "unplugin-auto-import": "^0.13.0",
+    "unplugin-vue-components": "^0.23.0",
     "vite": "^4.0.0"
   }
 }
