--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
   },
   "dependencies": {
     "@element-plus/icons": "^0.0.11",
+    "@element-plus/icons-vue": "^2.0.10",
     "axios": "^1.3.2",
+    "echarts": "^5.4.1",
     "element-plus": "^2.2.29",
     "vue": "^3.2.45",
     "vue-router": "^4.1.6",
